241102 개발일지 추가

--- a/개발일지.md
+++ b/개발일지.md
@@ -1,5 +1,15 @@
 # 개발일지 
 
+## 241102 토
+* 레포지토리에 개발일지.md 파일을 하나 만들어두고 쓰고 있는데 이걸 자동으로 불러와서 home에 보여주는 기능을 추가했다.
+  * 파일 입출력으로 개발일지를 읽고 해당 내용을 반환하는 api를 만들었다. 
+  * 컴포넌트가 마운트 될 때 한번만 호출되게끔 하기위해서 useEffect를 사용하되, 의존성은 주지않고 빈 배열로 남겨두었다.
+
+## 241101 금 
+* 배경 색에 대한 고민을 했다. 검정, 회색, 흰색으로 무난하게 가려다가 뭔가 눈이 덜 피로하게 하는 방법이 있지않을까 하고 색조합을 찾아보니 녹색계열이 피로감을 덜어준다고 하는데 막상 이런저런 녹색들을 적용해봤더니 뭔가 이상한 느낌이라 그냥.. 욕심을 버리기로 했다. 
+* 사용자 입장에서 보기 편한 width도 있지않을까? 하는 생각이 들었고 또 medium이나 블로그들을 보면 양쪽엔 여백을 가득 두고 가운데에 400후반대에서 800쯤안되는..? 정도의 폭을 유지하는 경향을 보고 왜 그렇게 하는지 궁금했다. 컨텐츠의 길이가 길어지면 사용자들은 고개를 약간씩 돌려야해서 이때 인지부하가 발생한다고 한다. [참고](https://surferseo.com/blog/how-to-design-blog/) 어쨌든 나도 마진을 양쪽에 주어서 폭이 너무 넓어지지 않게 제한을 두어보았다.
+* 탭의 위치를 어젠 왼쪽상단에 두었는데 오른쪽 상단으로 옮겼다. 그냥 내 감으로 그렇게 한거긴한데, 왼쪽 상단부터 글을 읽기 시작하는데 그 부근에 컨텐츠가 너무 많게 느껴져서 약간 불편했다. 그래서 필요할 때만 찾는 기능인 탭은 오른쪽 상단으로 옮겨서 글을 읽을 때 방해되지 않도록 배치했다. 
+
 ## 241031 목
 오늘은 탭을 만들었다. 메인, 독후감, 일상 세가지의 카테고리에 대한 기록이 필요할 것 같다. 일상 카테고리는 조금 추상적인 느낌이 있지만.. 앞으로 쓰면서 조금씩 구체화시켜보려한다.  
 
@@ -8,8 +18,3 @@
 내일은 시간도 재면서 개발해봐야지. 시간 개념이 너무 없다.. 개발하는게 귀찮다가도 만들다보면 또 꽤 재밌어서 시계 안보게된다 ㅋㅋㅋ 
 
 마지막으로 width를 적용하는게 나는 고민인게 최상위 컴포넌트에서 width를 vw로 잡아놓고 하위 컴포넌트에서 %로 조절하는 방식을 쓰고 있는데, 이렇게 쓰면 어그러지나..? 규모가 있는 개발조직에서는 이럴 때 어떻게 하는지 궁금했다. 
-
-## 241101 금 
-* 배경 색에 대한 고민을 했다. 검정, 회색, 흰색으로 무난하게 가려다가 뭔가 눈이 덜 피로하게 하는 방법이 있지않을까 하고 색조합을 찾아보니 녹색계열이 피로감을 덜어준다고 하는데 막상 이런저런 녹색들을 적용해봤더니 뭔가 이상한 느낌이라 그냥.. 욕심을 버리기로 했다. 
-* 사용자 입장에서 보기 편한 width도 있지않을까? 하는 생각이 들었고 또 medium이나 블로그들을 보면 양쪽엔 여백을 가득 두고 가운데에 400후반대에서 800쯤안되는..? 정도의 폭을 유지하는 경향을 보고 왜 그렇게 하는지 궁금했다. 컨텐츠의 길이가 길어지면 사용자들은 고개를 약간씩 돌려야해서 이때 인지부하가 발생한다고 한다. [참고](https://surferseo.com/blog/how-to-design-blog/) 어쨌든 나도 마진을 양쪽에 주어서 폭이 너무 넓어지지 않게 제한을 두어보았다.
-* 탭의 위치를 어젠 왼쪽상단에 두었는데 오른쪽 상단으로 옮겼다. 그냥 내 감으로 그렇게 한거긴한데, 왼쪽 상단부터 글을 읽기 시작하는데 그 부근에 컨텐츠가 너무 많게 느껴져서 약간 불편했다. 그래서 필요할 때만 찾는 기능인 탭은 오른쪽 상단으로 옮겨서 글을 읽을 때 방해되지 않도록 배치했다. 
