API 라우트 항상 동적으로 렌더링하도록 변경

--- a/개발일지.md
+++ b/개발일지.md
@@ -98,6 +98,7 @@
 - 포매팅에 성공했는데 개행을 두줄 이상하고 저장하면 꼭 한줄의 공백 개행이 남길래 불편하다고 느껴져서 이리저리 검색하다보니 신기하게도 POSIX의 표준을 알게됐다. IEEE에서 만든 표준이라고하는데 [모든 파일은 마지막에 공백이 하나 있어야한다고 한다.](https://stackoverflow.com/questions/61193625/prettier-not-formatting-empty-line-properly)
   - cf. [X, 구 트위터 타래](https://x.com/sarcasticfringh/status/1854031188161359948)
 - 개발 못했는데 하루가 가서 살짝 아쉬웠다.
+- `export const dynamic = 'force-dynamic';` cloudflare를 사용하려고 static output퍄일이 build되게 했었는데 이 설정과 `export const dynamic = 'force-dynamic';`은 함께 사용할 수 없어서 문제가 되었다.
 
 ## 241103 화
 
