공통 컴포넌트 탭을 layout으로 추상화

--- a/개발일지.md
+++ b/개발일지.md
@@ -1,5 +1,12 @@
 # 개발일지
 
+## 241111 월
+
+- 스타일 수정
+  - 단락 비율 조정
+  - 스크롤 바 안보이게 수정
+- 탭을 공통 컴포넌트로 추상화 시키기
+
 ## 241104 수
 
 - ESLint 설정 파일인 .eslintrc.json에 있는 key별 역할을 배웠다.
