cloudflare build 모듈 추가

--- a/개발일지.md
+++ b/개발일지.md
@@ -1,11 +1,16 @@
 # 개발일지
 
+## 241113 수
+
+- [ ] TODO: https://github.com/cloudflare/next-on-pages/issues/520
+
 ## 241112 화
 
 - ```bash
   ⨯ Error: export const dynamic = "force-dynamic" on page "/api" cannot be used with "output: export". See more info here: https://nextjs.org/docs/advanced-features/static-html-export
   ```
-  - 에러원인: cloud flare 빌드를 위해서 나는 static file들을 빌드 결과물로 만들어내는 옵션을 사용하고 있었다. `const dynamic = "force-dynamic"`와 함께 사용하지 못해서 발생한 에러. dynamic을 왜 사용하게되었는지 기록을 안해놨더니 잊어버렸다. 다음부턴 좀 더 작은 단위로 개발하고 기록하기를 해야겠다. 어쨌든 두옵션 모두 제거했더니 동작하는 상황이다.
+  - 에러원인: cloud flare 빌드를 위해서 나는 static file들을 빌드 결과물로 만들어내는 옵션을 사용하고 있었다. `const dynamic = "force-dynamic"`와 함께 사용하지 못해서 발생한 에러. dynamic을 왜 사용하게되었는지 기록을 안해놨더니 잊어버렸다. 다음부턴 좀 더 작은 단위로 개발하고 기록하기를 해야겠다.
+  - 해결방법: 두옵션 모두 제거했더니 동작하는 상황이다.
 
 ## 241111 월
 
