파일입출력 안되는 버그 수정, 임시로 변수 삭제

--- a/개발일지.md
+++ b/개발일지.md
@@ -3,6 +3,10 @@
 ## 241113 수
 
 - [ ] TODO: https://github.com/cloudflare/next-on-pages/issues/520
+- 아래와 같은 에러를 만났는데 한글로 파일명을 변수로 넘겨주니까 인코딩(?)이 깨지는 것 같아서 그냥 임시방편으로 변수를 제거했더니 동작은 한다. 어떻게 리팩토링 해야하는지 찾아봐야할듯.
+  ```bash
+  GET /api?fileName=$%EA%B0%9C%EB%B0%9C%EC%9D%BC%EC%A7%80 500 in 200ms
+  ```
 
 ## 241112 화
 
