개발일지 추가 및 edge 테스트

--- a/개발일지.md
+++ b/개발일지.md
@@ -5,8 +5,9 @@
 - [ ] TODO: https://github.com/cloudflare/next-on-pages/issues/520
 - 아래와 같은 에러를 만났는데 한글로 파일명을 변수로 넘겨주니까 인코딩(?)이 깨지는 것 같아서 그냥 임시방편으로 변수를 제거했더니 동작은 한다. 어떻게 리팩토링 해야하는지 찾아봐야할듯.
   ```bash
-  GET /api?fileName=$%EA%B0%9C%EB%B0%9C%EC%9D%BC%EC%A7%80 500 in 200ms
+  GET /api?fileName=$%EA%B0%9C%EB%B0%9C%EC%9D%BC%EC%A7%80 500 in
   ```
+- cloudflare 놓고 vercel에서 배포하게 바꿨다. 이유는 배포하려면 모듈도 하나 설치하고 (@cloudflare/next-on-pages), `export const rundtime = "edge"` 뭐 이런 코드도 `getServerSideProps` 쓰는 파일에 넣어줘야한다고 설명이 나와있어서 그대로 해봤더니 안됨. Edge Runtime이 경량화된 환경이라서 일부 Node.js API를 지원 안할 수 있다길래.. 그냥 cloudflare 포기하고 vercel 쓰기로 했다. 어차피 뭐 큰사이트 운영할것도 아니니.. ㅠㅠ 그래도 찝찝하니까 짬날때마다 cloudflare에 업로드하는 시도는 해보려고 한다.
 
 ## 241112 화
 
