--- a/개발일지.md
+++ b/개발일지.md
@@ -7,7 +7,10 @@
   ```bash
   GET /api?fileName=$%EA%B0%9C%EB%B0%9C%EC%9D%BC%EC%A7%80 500 in
   ```
-- cloudflare 놓고 vercel에서 배포하게 바꿨다. 이유는 배포하려면 모듈도 하나 설치하고 (@cloudflare/next-on-pages), `export const rundtime = "edge"` 뭐 이런 코드도 `getServerSideProps` 쓰는 파일에 넣어줘야한다고 설명이 나와있어서 그대로 해봤더니 안됨. Edge Runtime이 경량화된 환경이라서 일부 Node.js API를 지원 안할 수 있다길래.. 그냥 cloudflare 포기하고 vercel 쓰기로 했다. 어차피 뭐 큰사이트 운영할것도 아니니.. ㅠㅠ 그래도 찝찝하니까 짬날때마다 cloudflare에 업로드하는 시도는 해보려고 한다.
+- ~~cloudflare 놓고 vercel에서 배포하게 바꿨다. 이유는 배포하려면 모듈도 하나 설치하고 (@cloudflare/next-on-pages), `export const rundtime = "edge"` 뭐 이런 코드도 `getServerSideProps` 쓰는 파일에 넣어줘야한다고 설명이 나와있어서 그대로 해봤더니 안됨. Edge Runtime이 경량화된 환경이라서 일부 Node.js API를 지원 안할 수 있다길래.. 그냥 cloudflare 포기하고 vercel 쓰기로 했다. 어차피 뭐 큰사이트 운영할것도 아니니.. ㅠㅠ 그래도 찝찝하니까 짬날때마다 cloudflare에 업로드하는 시도는 해보려고 한다.~~
+  - 공식문서 안보고 [유튜브](https://youtu.be/A49jpNN4omY?si=tw6kctGNys3S6Prk) 보고 했는데 [친절한 공식 문서](https://developers.cloudflare.com/pages/framework-guides/nextjs/ssr/get-started/)를 발견해서 이걸 보고 하니까 해결됐다.ㅠㅠ 순서 몇개 빼먹어서 안된 듯하다.
+  - runtime을 edge로 하면 지원 안되는 node module이 있단 것도 배웠다. 파일 입출력 모듈을 쓰고 있었는데 나중에 DB로 바꿀거라는 핑계로 얼레벌레 짜둔 코드를 갈아 치울 타이밍이 온 것 같다.
+- SQLite를 설치했다. supabase 쓸까하다가 이것도 일단 어차피 내가 글을 뭐 얼마나 쓸라나 싶어서 기술을 최소화해서 쓰는 방향으로 선택해봤다.
 
 ## 241112 화
 
