개발일지 추가

--- a/개발일지.md
+++ b/개발일지.md
@@ -1,5 +1,10 @@
 # 개발일지
 
+## 241115 금
+
+- sqlite DB 커넥션 추가, 테이블 생성
+- 2일 전에 커밋하고 원격으로 푸시한 이후에 DB 관련 작업 커밋이 로컬에 있는줄 알고 --amend 옵션으로 커밋을 했다가 non-fast-forward 에러를 마주쳤다.
+
 ## 241113 수
 
 - [ ] TODO: https://github.com/cloudflare/next-on-pages/issues/520
