DB에 가지고 있던 데이터 삽입하는 쿼리 작성

--- a/개발일지.md
+++ b/개발일지.md
@@ -1,5 +1,10 @@
 # 개발일지
 
+## 241119 화
+
+- sqlite는 cloudflare에 올릴 수 있는게 아니다. 아마존의 EC2를 사용했을 때가 많았어서 sqlite를 원격 서버에서 구동해야하는 형태인줄 알았는데 Cloudflare D1은 그냥 DB자체를 제공하는 개념이였다.
+- SQL문을 작성해서 테이블을 생성하고 기존에 가지고 있던 데이터들을 D1에 삽입할 수 있게끔 만들었다.
+
 ## 241115 금
 
 - sqlite DB 커넥션 추가, 테이블 생성
@@ -7,7 +12,7 @@
 
 ## 241113 수
 
-- [ ] TODO: https://github.com/cloudflare/next-on-pages/issues/520
+- https://github.com/cloudflare/next-on-pages/issues/520
 - 아래와 같은 에러를 만났는데 한글로 파일명을 변수로 넘겨주니까 인코딩(?)이 깨지는 것 같아서 그냥 임시방편으로 변수를 제거했더니 동작은 한다. 어떻게 리팩토링 해야하는지 찾아봐야할듯.
   ```bash
   GET /api?fileName=$%EA%B0%9C%EB%B0%9C%EC%9D%BC%EC%A7%80 500 in
@@ -32,7 +37,7 @@
   - 스크롤 바 안보이게 수정
 - 탭을 공통 컴포넌트로 추상화 시키기
 
-## 241104 수
+## 241106 수
 
 - ESLint 설정 파일인 .eslintrc.json에 있는 key별 역할을 배웠다.
 
@@ -132,7 +137,7 @@
 - 개발 못했는데 하루가 가서 살짝 아쉬웠다.
 - `export const dynamic = 'force-dynamic';` cloudflare를 사용하려고 static output퍄일이 build되게 했었는데 이 설정과 `export const dynamic = 'force-dynamic';`은 함께 사용할 수 없어서 문제가 되었다.
 
-## 241103 화
+## 241105 화
 
 - 동적 라우팅과 린터 설정을 하다가 시간이 다갔다.. 두가지를 한번에 하려고 하다보니 생각이 꼬인 것 같다. 개발 능률이 나지 않는다는 이유로 린터설정을 하고 있으면 개발하는 시간이 부족한 것 같고 개발을 그냥 하자니 코드 형식 수정하는데 시간을 너무 많이 들이는 듯해서 신경쓰이고... 내일 한가지씩 다시 도전해봐야겠다. 아무도 쫓아오는 사람 없으니까 하나씩 천천히 해보기.
 
